--- a/.gitignore
+++ b/.gitignore
@@ -312,3 +312,4 @@ bh_unicode_properties.cache
 # https://packagecontrol.io/packages/sublime-github
 GitHub.sublime-settings
 
+!/gradle/wrapper/gradle-wrapper.jar
